sidebar overflow fixed in infromation page

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1833,6 +1833,10 @@ img {
   border-left-width: 1px;
 }
 
+.border-t-2 {
+  border-top-width: 2px;
+}
+
 .border-solid {
   border-style: solid;
 }
@@ -2058,6 +2062,10 @@ img {
 
 .bg-cover {
   background-size: cover;
+}
+
+.bg-left-top {
+  background-position: left top;
 }
 
 .p-2\.5 {
@@ -2365,6 +2373,10 @@ img {
   padding-left: 4%;
 }
 
+.pt-6 {
+  padding-top: 1.5rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -2667,6 +2679,10 @@ img {
   letter-spacing: -0.04rem;
 }
 
+.tracking-tighter {
+  letter-spacing: -0.05em;
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -2832,6 +2848,10 @@ img {
 .shadow-slate-700\/20 {
   --tw-shadow-color: rgb(51 65 85 / 0.2);
   --tw-shadow: var(--tw-shadow-colored);
+}
+
+.outline-red-600 {
+  outline-color: #dc2626;
 }
 
 .drop-shadow-md {
@@ -3268,6 +3288,11 @@ img {
   z-index: 10;
 }
 
+.after\:-z-10::after {
+  content: var(--tw-content);
+  z-index: -10;
+}
+
 .after\:mx-2\.5::after {
   content: var(--tw-content);
   margin-left: 0.625rem;
@@ -3422,6 +3447,11 @@ img {
   --tw-gradient-to: #000;
 }
 
+.after\:bg-left-top::after {
+  content: var(--tw-content);
+  background-position: left top;
+}
+
 .after\:text-2xl::after {
   content: var(--tw-content);
   font-size: 1.5rem;
@@ -3487,6 +3517,11 @@ img {
 .hover\:border-green-500:hover {
   --tw-border-opacity: 1;
   border-color: rgb(34 197 94 / var(--tw-border-opacity));
+}
+
+.hover\:border-red-600:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(220 38 38 / var(--tw-border-opacity));
 }
 
 .hover\:bg-lime-500:hover {
@@ -3671,6 +3706,10 @@ img {
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.focus\:outline-red-600:focus {
+  outline-color: #dc2626;
 }
 
 .group:hover .group-hover\:visible {
